# CompoundAnnotation

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
notebooks/: formula_prediction_combined_evaluation.ipynb
src/fp_runner/: candidates.py  features.py  main.py  metrics.py  model.py  pipeline.py  scoring.py  utils.py
