[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "casmi-fp-runner"
version = "0.1.0"
description = "Notebook-to-scripts pipeline for CASMI formula prediction + candidate retrieval"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name="Your Name"}]
dependencies = [
  "pandas>=1.5",
  "numpy>=1.23",
  "scikit-learn>=1.2",
  "tabulate>=0.9",
  "tensorflow>=2.10",
  "rdkit-pypi>=2022.9.4",
  ]
